--- a/scss/partials/components/_cards.scss
+++ b/scss/partials/components/_cards.scss
@@ -111,7 +111,7 @@
 .selectInput--medium.active {
     line-height: 34px;
     font-size: 34px;
-    transition: all .3s ease-in-out;
+    //transition: all .3s ease-in-out;
 }
 .selectInput--small.active {
     font-size: 18px;
